conformance/tests/httproute-multiple-gateways.yaml
# Copyright IBM Corp. 2019, 2022
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: multiple-gateways-shared-route
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  - name: all-namespaces
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /shared
    backendRefs:
    - name: infra-backend-v1
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: same-namespace-dedicated-route
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: infra-backend-v2
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: all-namespaces-dedicated-route
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: all-namespaces
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: infra-backend-v3
      port: 8080
